--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       mysql:
         condition: service_healthy
     command: php artisan serve --host=0.0.0.0 --port=8000
+    #command: sh -c "composer install --no-interaction && php artisan serve --host=0.0.0.0 --port=8000"
 
   mysql:
     image: mysql:8.0
